security/run-as-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-pod-as-root
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["/bin/sleep", "999999"]
      securityContext:
        runAsUser: 0
        runAsGroup: 0
