security/run-as-user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-pod-as-user
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["/bin/sleep", "999999"]
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
