security/allow-ns-label.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-ipblock
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            namespace: test
  egress:
    - {}
